# deragcore

./: .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  INTEGRATION_TESTING_IMPLEMENTATION.md  INTEGRATION_TESTING_PATTERNS.md  INTEGRATION_TESTING_QUICKSTART.md  INTEGRATION_TESTING_REFERENCE.md  NEW_FILES_VENDORING.txt  PHASE0_IMPLEMENTATION_PLAN.md  PHASE2_PROGRESS.md  PLAN_ENHANCED.md  PROGRESS.md  SMART_CHUNKING_BENCHMARKS.md  SMART_CHUNKING_IMPLEMENTATION.md  SMART_CHUNKING_RESEARCH.md  SMART_CHUNKING_SUMMARY.md  VENDORING_CHECKLIST.md  VENDORING_COMPLETE.md  VENDOR_QUICK_REF.md  agent.md  docker-compose.yml  generate_vendor_manifest.py  install-vendor.bat  install-vendor.sh  pip.conf  pyproject.toml  requirements-vendor.txt  requirements.txt  updates.txt  vendor_install.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_seed_presets.py  003_phase5_agents.py  004_phase5_memory.py  005_phase5_chroma.py  006_phase5_multimodal.py
md/: PHASE5_PLAN.md  VENDORING.md  VENDOR_SUMMARY.md  ragcore.md
ragcore/: __init__.py  config.py  main.py  models.py
ragcore/auth/: __init__.py  dependencies.py  manager.py  models.py  router.py
ragcore/core/: __init__.py  ai_controller.py  context_window_manager.py  job_manager.py  model_provider_registry.py  model_registry.py  provider_registry.py  schemas.py  (+3 more)
tests/: __init__.py  test_health.py  test_phase0_task4.py  test_phase0_task5_chunking.py  test_phase1_complete.py  test_phase2_chat.py  test_phase2_files.py  test_phase3_research.py  test_phase4_production.py  test_phase5_sprint1.py  test_phase5_sprint2.py  test_phase5_sprint3.py  test_phase5_sprint4_chroma.py  test_phase5_sprint4_integration.py  test_phase5_sprint5_multimodal_part1.py  test_phase5_sprint5_multimodal_part2.py  test_provider_adapters.py
(+86 files in other folders)
